<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextNumeroDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editTextNumeroDatosHint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonIngresarFracciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="iniciarIngresoFracciones"
        android:text="@string/button"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textViewResultado"
        android:textSize="20sp" />
</LinearLayout>