<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:ignore="ExtraText">
    tools:context=".dialog">

    <EditText
        android:id="@+id/editTextNumerador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextAgregarNumerador"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextDenominador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/editTextAgregarDenominador"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editTextNumeradorAgregar"
        tools:ignore="VisualLintButtonSize" />


</LinearLayout>